--- a/google/css/style.css
+++ b/google/css/style.css
@@ -1,63 +1,463 @@
+
+/*body*/
 body{
-    background-color: #212121;
-    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    background-color: #212121;
     color: white;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/*header*/
 header {
+	width: 100%;
+    height: 60px;
+}
+
+header nav {
+    padding: 10px;
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    height: inherit;
 }
 
-section {
+header nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    height: auto;
+}
+
+header nav ul li{
+    padding: 2px;
+    margin-left: 6px;
+    margin-right: 6px;;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white; 
+    font-size: 13px;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+.icon-container {
+    width: 39px;
+    height: 39px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-left: 4px;
+}
+
+.dots {
+    margin-left: 10px;
+}
+
+.icon-container:hover {
+    background-color: #303134;
+    border-radius: 50%;
+}
+
+.icon-container .dots-icon{
+    background-image: url('../img/dots.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 22px;
+    height: 22px;
+}
+
+.icon-container img {
+    border-radius: 50%;    
+}
+
+.block {
+    display: block;
+}
+
+/*section*/
+section {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 32px 0;
+    flex-grow: 1;
+    min-height: 500px;
 }
 
-.btns-holder a:link, .btns-holder a:visited {
+.logo {
+    height: 95px;
+    aspect-ratio: auto 272 / 92;
+    margin-top: 70px;
+    margin-bottom: 27px;
+}
+
+/* Popup Busqueda */
+.search-box {
+    width: 584px;
+}
+
+.hidden {
+    display: none;
+}
+
+.busqueda {
+    position: absolute;
+    overflow: hidden;
+    border-radius: 0px 0px 24px 24px;
+    box-shadow: 0 4px 6px rgb(32 33 36 / 28%);
+    width: inherit;
+    max-width: 584px;
+    margin-top: -1px;
+    background-color: #262626;
+    z-index: 1;
+}
+
+.busqueda-line {
+    border-top: 1px solid #666c72;
+    margin: 0 20px 0 14px;
+    margin-bottom: 5px;
+}
+
+.busqueda ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.busqueda ul li {
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+}
+
+.busqueda ul li:hover { 
+    background-color: #303134;
+
+}
+
+.borrar {
+    display: none;
+    align-self: center;
+    color:#9aa0a6;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.borrar:hover {
+    color: #9aa0a6;
+    text-decoration: underline;
+}
+
+.busqueda ul li:hover > .borrar {
+    display:inline;
+}
+
+.busqueda ul li span {
+    font-size: 16px;
+    color: #9aa0a6;
+    cursor: default;
+    flex-grow: 1;
+}
+
+.recent-img {
+    background: url(../img/search.tiff) no-repeat 0 -21px;
+    background-size: 20px;
+    min-height: 20px;
+    min-width: 20px;
+    height: 20px;
+    width: 20px;
+    margin-right: 20px;
+}
+
+.busqueda .botones {
+    text-align: center;
+    vertical-align: center;
+    min-height: 70px;
+    margin-top: 10px;
+}
+
+/* Search bar */
+.search {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #666c72;
+    border-radius: 24px;
+    width: 584px;
+    max-width: 584px;
+    min-height: 45px;
+    padding: 4px 8px 1px 14px;   
+}
+
+.search-popup {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-color: #9aa0a6;
+}
+
+.search:hover {
+    background-color: #262626;
+    border: #262626;
+}
+
+.search input {
+    background-color: transparent;
+    border: none;
+    color: white;
+    flex-grow: 1;
+    height: 34px;
+    font-size: 16px;
+    outline: none;
+    word-wrap: break-word;
+}
+
+.lupa {
+    fill: #9aa0a6;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    margin-top: -2px;
+    margin-right: 10px;
+}
+
+.search-buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-width: 80px;
+    margin-top: -6px;
+}
+
+.search-buttons-item {
+    width: 24px;
+    height: 24px;   
+    margin: 0 8px; 
+}
+
+.search-buttons svg {
+    fill: #70757a;
+    padding-right: 10px;
+    border-right: 1px solid #9aa0a6;
+    width: 36px;
+    height: 36px; 
+    cursor: pointer;
+}
+
+.search-buttons-item img {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/*botones*/
+.botones {
+    margin-top: 20px;
+}
+
+.boton {
     background-color: #303134;
     border: 1px solid #303134;
+    border-radius: 4px;
+    color: #bdc1c6;
+    font-size: 14px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    margin: 11px 4px;
+}
+
+.boton a{
+    color: #bdc1c6;
+}
+
+.boton:hover {
+    border: 1px solid #666c72;
+}
+
+/*txt final*/
+.txt-final{
+    color: #bdc1c6;
     display: inline-block;
-    padding: 10px;
-    color: #fff;
+    line-height: 28px;
+}
+
+.txt-final a {
+    padding: 0 3px;
+    color: #8ab4f8;
     text-decoration: none;
-    border-radius: 6px;
 }
 
 
+/*footer*/
 footer {
+    width: 100%;
     background: #171717;
-    padding: 20px 0;
+    color: #9aa0a6;
 }
 
 .f-top {
-    border-bottom: 1px solid #9aa0a6;
-    padding: 10px;
-    color: #9aa0a6;
+    height: 48px;
+    font-size: 15px;
+    padding: 15px 30px;
+    border-bottom: 1px solid rgb(72, 70, 70);
 }
 
 .f-bot {
+    height: 47px;
+    padding: 0 20px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 10px;
+    align-items: center;
 }
 
-.f-bot a:link, .f-bot a:visited {
-    color: #9aa0a6;
-    text-decoration: none;
-    display: inline-block;
-    margin: 0 5px;
+footer ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-left: 0;
 }
+
+footer ul li a {
+    padding: 15px;
+    color: #9aa0a6;
+    font-size: 14px;
+}
+
+ul li a:hover, ul li a:active {
+    text-decoration:underline;
+}
+
+.f-left{
+    justify-self: left
+}
+
+.f-right{
+    justify-self: right
+}
+
+
+/*JS*/
+.apps-container {
+    background: #303134;
+    border: 1px solid #212121;
+    border-radius: 8px;
+    box-shadow: 0px 1px 2px 0px rgb(60 64 67 / 30%), 0px 2px 6px 2px rgb(60 64 67 / 15%);
+    overflow-x: hidden;
+    padding-top: 0;
+    position: absolute;
+    right: 15px;
+    top: 60px;
+    width: 315px;
+    z-index: 2;
+}
+
+.apps-container ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.apps-container ul li {
+    background-size: 40px 40px;
+    width: 84px;
+    height: 84px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.apps-container ul li a
+{ 
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    color: inherit;
+    text-decoration: none;
+}
+
+.apps-container ul li:hover {
+    background-color: #393939;
+    border-radius: 5px;
+}
+
+.apps-container ul li:nth-child(1){
+    background-image: url(../img/drive.png);
+    
+}
+
+.apps-container ul li:nth-child(2) {
+    background-image: url(../img/calendar.png);
+}
+
+.apps-container ul li:nth-child(3) {
+    background-image: url(../img/maps.png);
+}
+
+.apps-container ul li:nth-child(4) {
+    background-image: url(../img/play.png);
+}
+
+.apps-container ul li:nth-child(5) {
+    background-image: url(../img/gmail.png);
+}
+
+.apps-container ul li:nth-child(6) {
+    background-image: url(../img/google.png);
+}
+
+.apps-container ul li:nth-child(7) {
+    background-image: url(../img/negocio.png);
+}
+
+.apps-container ul li:nth-child(8) {
+    background-image: url(../img/youtube.png);
+}
+
+.apps-container ul li:nth-child(9) {
+    background-image: url(../img/photos.png);
+}
+
+.apps-container ul li:nth-child(10) {
+    background-image: url(../img/news.png);
+}
+
+
+.apps-container ul li:nth-child(11) {
+    background-image: url(../img/meet.png);
+}
+
+.apps-container ul li:nth-child(12) {
+    background-image: url(../img/hangouts.png);
+}
+
+
